syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message ChatInfo {
	bool is_read = 14;
	uint32 sequence = 1;
	uint32 to_uid = 11;
	uint32 time = 15;
	uint32 platform_type = 10;
	uint32 uid = 2;
	oneof content {
		string text = 1447;
		uint32 icon = 1438;
		SystemHint system_hint = 411;
	}
	message SystemHint {
		uint32 type = 8;
	}
}