syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "FriendOnlineState.proto";
import "ProfilePicture.proto";
import "SocialShowAvatarInfo.proto";
import "PlatformType.proto";
import "FriendEnterHomeOption.proto";


message FriendBrief {
	string signature = 6;
	string remark_name = 17;
	string online_id = 11;
	string nickname = 2;
	bool is_duel_observable = 29;
	bool is_psn_source = 26;
	bool is_in_duel = 28;
	bool is_game_source = 25;
	bool is_mp_mode_available = 10;
	bool is_chat_no_disturb = 15;
	uint32 last_active_time = 12;
	uint32 chat_sequence = 16;
	uint32 mp_player_num = 14;
	uint32 world_level = 5;
	uint32 name_card_id = 13;
	uint32 param = 8;
	uint32 level = 3;
	uint32 avatar_id = 4;
	uint32 uid = 1;
	FriendOnlineState online_state = 7;
	FriendEnterHomeOption friend_enter_home_option = 23;
	PlatformType platform_type = 27;
	ProfilePicture profile_picture = 24;
	repeated SocialShowAvatarInfo show_avatar_info_list = 22;
}