syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message PrivateChatReq {
	uint32 target_uid = 7;
	oneof content {
		string text = 14;
		uint32 icon = 9;
	}
}