syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message SetPlayerNameRsp {
	string nick_name = 10;
	int32 retcode = 13;
}